# multilanguage_demo

./: .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: c.yml  go.yml  main.yml  python.yml
bindings/c/: CMakeLists.txt
bindings/c/include/: calc_c.h  ffi_utils.h
bindings/c/src/: calc_c.cpp
bindings/c/test/: main.cpp  test_calc.c  test_calculator.cpp
bindings/go/: README.md  calc.go  calc_test.go  go.mod  main  main.go
bindings/python/: CMakeLists.txt  README.md  setup.py  tox.ini
bindings/python/src/: calculator_bindings.cpp  error_bindings.cpp  main.cpp
bindings/python/tests/: conftest.py
bindings/python/tests/integration/: test_calculator.py
bindings/python/tests/unit/: test_calculator.py
include/: calc.h  calc.hpp  errors.h  errors.hpp
src/: calc.cpp
tests/: test_calculator.cpp
